--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/revision-aprobacion-rapg/revision-aprobacion-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/revision-aprobacion-rapg/revision-aprobacion-rapg.component.html
@@ -16,7 +16,7 @@
                             <div class="col d-flex align-items-center">
                                 <mat-form-field class="example-full-width">
                                     <input matInput formControlName="fechaRevision"
-                                        [matDatepicker]="pickerFechaRevision" [min]="minDate" readonly
+                                        [matDatepicker]="pickerFechaRevision" readonly
                                         (click)="pickerFechaRevision.open()" required placeholder="DD/MM/AAAA" />
                                     <mat-datepicker #pickerFechaRevision></mat-datepicker>
                                 </mat-form-field>
