--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/revision-aprobacion-rapg/revision-aprobacion-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/revision-aprobacion-rapg/revision-aprobacion-rapg.component.html
@@ -81,7 +81,7 @@
                                 <div class="col d-flex align-items-center">
                                     <mat-form-field class="example-full-width">
                                         <input matInput formControlName="fechaAprob" [matDatepicker]="pickerFecha22"
-                                            [min]="minDate" readonly (click)="pickerFecha22.open()" required
+                                         readonly (click)="pickerFecha22.open()" required
                                             placeholder="DD/MM/AAAA" />
                                         <mat-datepicker #pickerFecha22></mat-datepicker>
                                     </mat-form-field>
