--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
@@ -102,18 +102,22 @@
             </mat-expansion-panel>
             <mat-expansion-panel class="expansion-style">
                 <mat-expansion-panel-header class="expansion-style--header">
-                    <mat-panel-title class="expansion-style--title sin-diligenciar">
+                    <mat-panel-title class="expansion-style--title" [ngClass]="estadoAcordeones.estadoSolicitudPago">
                         Registrar solicitud de pago
                     </mat-panel-title>
                 </mat-expansion-panel-header>
                 <app-obs-registrar-solicitud-pago   [contrato]="contrato"
                                                     [aprobarSolicitudPagoId]="menusIdPath.aprobarSolicitudPagoId"
-                                                    [registrarSolicitudPago]="listaTipoObservacionSolicitudes.registrarSolicitudPago">
+                                                    [registrarSolicitudPago]="listaTipoObservacionSolicitudes.registrarSolicitudPago"
+                                                    (estadoSemaforoRegistroSolicitud)="estadoAcordeones.estadoSolicitudPago = $event">
                 </app-obs-registrar-solicitud-pago>
             </mat-expansion-panel>
         </mat-accordion>
     </ng-container>
     <ng-template #esOtrosCostos>
+        <section class="mt-1em">
+            <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.otrosCostos">Tipo de solicitud: <b>Otros costos/servicios</b></span>
+        </section>
         <mat-card class="shipping-card">
             <mat-card-header class="header-card header-card--margin">
                 <mat-card-title class="header-card--text">
@@ -125,7 +129,7 @@
                 <p><strong>Número de radicado SAC:</strong> {{ otrosCostosForm.get( 'numeroRadicadoSAC' ).value }} </p>
                 <p><strong>Número de factura:</strong> {{ otrosCostosForm.get( 'numeroFactura' ).value }} </p>
                 <p><strong>Valor facturado:</strong> ${{ otrosCostosForm.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
-                <p><strong>Tipo de pago:</strong> {{ otrosCostosForm.get( 'tipoPago' ).value.nombre }} </p>
+                <p *ngIf="otrosCostosForm.get( 'tipoPago' ).value !== null"><strong>Tipo de pago:</strong> {{ otrosCostosForm.get( 'tipoPago' ).value.nombre }} </p>
             </mat-card-content>
         </mat-card>
 
@@ -156,8 +160,7 @@
                     1000
                 </span>
             </div>
-            <button mat-button color="warn" class="btn-guardar"
-                type="button">
+            <button mat-button color="warn" class="btn-guardar" type="button" (click)="guardar()">
                 <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </form>
@@ -166,7 +169,7 @@
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title en-alerta">
-                    Validar lista de chequeo
+                    Verificar lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <div style="margin-top: 1em;">
@@ -177,7 +180,7 @@
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title sin-diligenciar">
+                <mat-panel-title class="expansion-style--title" [ngClass]="estadoAcordeones.soporteSolicitud">
                     Soporte de la solicitud
                 </mat-panel-title>
             </mat-expansion-panel-header>
