--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-datos-factura/obs-datos-factura.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-datos-factura/obs-datos-factura.component.html
@@ -39,9 +39,10 @@
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content style="text-align: left;">
-                <p><b>07/10/2020</b></p>
-                <p><b>¿Desde la supervisión tiene observaciones a los datos de la factura?:</b> Sí</p>
-                <p>La factura debe ser la FAC00450</p>
+                <p><b> {{ addressForm.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"><b>¿Desde la supervisión tiene observaciones a los datos de la factura?:</b> Si</p>
+                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === false"><b>¿Desde la supervisión tiene observaciones a los datos de la factura?:</b> No</p>
+                <section [innerHTML]="addressForm.get( 'observaciones' ).value" *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"></section>
             </mat-card-content>
         </mat-card>
     </ng-container>
