--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/ver-detalle-aprobar-solicitud/ver-detalle-aprobar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/ver-detalle-aprobar-solicitud/ver-detalle-aprobar-solicitud.component.html
@@ -1,14 +1,14 @@
-<section class="container text-center" *ngIf="contrato !== undefined">
+<section class="container text-center" *ngIf="contrato !== undefined && menusIdPath !== undefined && listaTipoObservacionSolicitudes !== undefined">
     <div class="text-right">
-        <a routerLink="/aprobarSolicitudesPago" mat-button color="primary" class="btn-regresar">
+        <a routerLink="/verificarSolicitudPago" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
     <h1 class="title-menu--h1">
-        Aprobar solicitud {{ contrato.solicitudPagoOnly.numeroSolicitud }}
+        Ver detalle solicitud {{ contrato.solicitudPagoOnly.numeroSolicitud }}
     </h1>
     <ng-container *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === this.tipoSolicitudCodigo.contratoInterventoria || contrato.solicitudPagoOnly.tipoSolicitudCodigo === this.tipoSolicitudCodigo.contratoObra; else esOtrosCostos">
-        <p style="margin-top: 0.5em;" *ngIf="this.idGestion==1">
+        <p style="margin-top: 0.5em;">
             <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoObra">Tipo de solicitud: <b>Contratos de obra</b></span>
             <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoInterventoria">Tipo de solicitud: <b>Contratos de interventoria</b></span>
         </p>
@@ -87,7 +87,11 @@
                     </mat-panel-title>
                 </mat-expansion-panel-header>
 
-                <app-obs-cargar-forma-pago [solicitudPago]="contrato.solicitudPagoOnly" [esVerDetalle]="esVerDetalle"></app-obs-cargar-forma-pago>
+                <app-obs-cargar-forma-pago  [solicitudPago]="contrato.solicitudPagoOnly"
+                                            [aprobarSolicitudPagoId]="menusIdPath.aprobarSolicitudPagoId"
+                                            [cargarFormaPagoCodigo]="listaTipoObservacionSolicitudes.cargarFormaPagoCodigo"
+                                            [esVerDetalle]="esVerDetalle">
+                </app-obs-cargar-forma-pago>
             </mat-expansion-panel>
             <mat-expansion-panel class="expansion-style">
                 <mat-expansion-panel-header class="expansion-style--header">
@@ -96,23 +100,18 @@
                     </mat-panel-title>
                 </mat-expansion-panel-header>
 
-                <app-obs-registrar-solicitud-pago [contrato]="contrato" [esVerDetalle]="esVerDetalle"></app-obs-registrar-solicitud-pago>
-            </mat-expansion-panel>
-            <mat-expansion-panel class="expansion-style">
-                <mat-expansion-panel-header class="expansion-style--header">
-                    <mat-panel-title class="expansion-style--title en-alerta">
-                        Validar lista de chequeo
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <div style="margin-top: 1em;">
-                    <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em">
-                        Este acordeón consume información de la funcionalidad Listas de chequeó.
-                    </div>
-                </div>
+                <app-obs-registrar-solicitud-pago   [contrato]="contrato"
+                                                    [aprobarSolicitudPagoId]="menusIdPath.aprobarSolicitudPagoId"
+                                                    [registrarSolicitudPago]="listaTipoObservacionSolicitudes.registrarSolicitudPago"
+                                                    [esVerDetalle]="esVerDetalle">
+                </app-obs-registrar-solicitud-pago>
             </mat-expansion-panel>
         </mat-accordion>
     </ng-container>
     <ng-template #esOtrosCostos>
+        <section class="mt-1em">
+            <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.otrosCostos">Tipo de solicitud: <b>Otros costos/servicios</b></span>
+        </section>
         <mat-card class="shipping-card">
             <mat-card-header class="header-card header-card--margin">
                 <mat-card-title class="header-card--text">
@@ -124,11 +123,37 @@
                 <p><strong>Número de radicado SAC:</strong> {{ otrosCostosForm.get( 'numeroRadicadoSAC' ).value }} </p>
                 <p><strong>Número de factura:</strong> {{ otrosCostosForm.get( 'numeroFactura' ).value }} </p>
                 <p><strong>Valor facturado:</strong> ${{ otrosCostosForm.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
-                <p><strong>Tipo de pago:</strong> {{ otrosCostosForm.get( 'tipoPago' ).value.nombre }} </p>
+                <p *ngIf="otrosCostosForm.get( 'tipoPago' ).value !== null"><strong>Tipo de pago:</strong> {{ otrosCostosForm.get( 'tipoPago' ).value.nombre }} </p>
+            </mat-card-content>
+        </mat-card>
+
+        <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;" *ngIf="otrosCostosObsForm.get( 'fechaCreacion' ).value !== null">
+            <mat-card-header class="header-card header-card--margin">
+                <mat-card-title class="header-card--text textoGris">
+                    Observación de la supervisión
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="text-align: left;">
+                <p><b> {{ otrosCostosObsForm.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                <p *ngIf="otrosCostosObsForm.get( 'tieneObservaciones' ).value === true"><b>¿Tiene observaciones a la solicitud de pago?:</b> Si</p>
+                <p *ngIf="otrosCostosObsForm.get( 'tieneObservaciones' ).value === false"><b>¿Tiene observaciones a la solicitud de pago?:</b> No</p>
+                <section [innerHTML]="otrosCostosObsForm.get( 'observaciones' ).value" *ngIf="otrosCostosObsForm.get( 'tieneObservaciones' ).value === true"></section>
             </mat-card-content>
         </mat-card>
     </ng-template>
     <mat-accordion>
+        <mat-expansion-panel class="expansion-style">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title en-alerta">
+                    Verificar lista de chequeo
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <div style="margin-top: 1em;">
+                <div class="d-flex align-items-center solbloq ml8 info-text en-alertaLibre mb-2em">
+                    Este acordeón consume información de la funcionalidad Listas de chequeó.
+                </div>
+            </div>
+        </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title">
@@ -146,15 +171,17 @@
                 </mat-card-content>
             </mat-card>
 
-            <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
+            <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;" *ngIf="addressForm.get( 'fechaCreacion' ).value !== null">
                 <mat-card-header class="header-card header-card--margin">
                     <mat-card-title class="header-card--text textoGris">
                         Observación de la supervisión
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content style="text-align: left;">
-                    <p><b>07/10/2020</b></p>
-                    <p><b>¿Desde la supervisión tiene observaciones a los descuentos de la Dirección Técnica?:</b> No</p>
+                    <p><b> {{ addressForm.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                    <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"><b>¿Desde la supervisión tiene observaciones a el soporte de la solicitud?:</b> Si</p>
+                    <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === false"><b>¿Desde la supervisión tiene observaciones a el soporte de la solicitud?:</b> No</p>
+                    <section [innerHTML]="addressForm.get( 'observaciones' ).value" *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"></section>
                 </mat-card-content>
             </mat-card>
         </mat-expansion-panel>
