fix-otrosCostos&expensas-4.1.9

--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/autorizar-solicitud-pago/autorizar-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/autorizar-solicitud-pago/autorizar-solicitud-pago.component.html
@@ -23,7 +23,7 @@
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="fechaSolicitud">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de solicitud </th>
-                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaSolicitud }}</b> </td>
+                <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
             </ng-container>
             <ng-container matColumnDef="numeroSolicitud">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de solicitud </th>
@@ -31,7 +31,7 @@
             </ng-container>
             <ng-container matColumnDef="modalidadContrato">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Modalidad del contrato </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.modalidadContrato }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.modalidadNombre }} </td>
             </ng-container>
             <ng-container matColumnDef="numeroContrato">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Número del contrato </th>
@@ -39,27 +39,45 @@
             </ng-container>
             <ng-container matColumnDef="estadoAprobacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la autorización de pago </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoAprobacion }} </td>
+                <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoNombre }} </td>
             </ng-container>
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
-                <td mat-cell *matCellDef="let element" align="center"> 
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.autorizarSolicitud(element.gestion)"
-                    *ngIf="element.estadoAprobacion=='Sin autorización'">
-                        Autorizar solicitud
-                    </button>
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.openCertificate()"
-                    *ngIf="element.estadoAprobacion=='Con solicitud autorizada por el coordinador'">
-                        Enviar para autorizar solicitud
-                    </button>
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verDetalleEditar(element.gestion)"
-                    *ngIf="element.estadoAprobacion=='En proceso de autorización'">
-                        Ver detalle/Editar
-                    </button>
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verDetalle(element.gestion)"
-                    *ngIf="element.estadoAprobacion=='Con solicitud devuelta por el coordinador' || element.estadoAprobacion=='Con solicitud autorizada por el coordinador'">
-                        Ver detalle
-                    </button>
+                <td mat-cell *matCellDef="let element" align="center">
+                    <ng-container *ngIf="element.tipoSolicitudCodigo !== tipoSolicitudCodigo.expensas; else esExpensas">
+                        <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'autorizacionSolicitud', element.contratoId, element.solicitudPagoId ]">
+                            Autorizar solicitud
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table">
+                            Enviar para autorizar solicitud
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'autorizacionSolicitud', element.contratoId, element.solicitudPagoId ]">
+                            Ver detalle/Editar
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'verDetalleAutorizarSolicitud', element.contratoId, element.solicitudPagoId ]">
+                            Ver detalle
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table">
+                            Devolver solicitud
+                        </button>
+                    </ng-container>
+                    <ng-template #esExpensas>
+                        <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'observacionExpensas', element.solicitudPagoId ]">
+                            Autorizar solicitud
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table">
+                            Enviar para autorizar solicitud
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'observacionExpensas', element.solicitudPagoId ]">
+                            Ver detalle/Editar
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table" [routerLink]="[ 'verDetalleExpensas', element.solicitudPagoId ]">
+                            Ver detalle
+                        </button>
+                        <button mat-raised-button color="accent" class="btn-table">
+                            Devolver solicitud
+                        </button>
+                    </ng-template>
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
