--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/aprobar-solicitudes-pago/aprobar-solicitudes-pago.component.html
@@ -38,7 +38,7 @@
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroContrato }} </td>
             </ng-container>
             <ng-container matColumnDef="estadoAprobacion">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la aprobación </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la verificación </th>
                 <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoNombre }} </td>
             </ng-container>
             <ng-container matColumnDef="gestion">
