--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/ver-detalle-expensas/ver-detalle-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/ver-detalle-expensas/ver-detalle-expensas.component.html
@@ -1,6 +1,6 @@
 <section class="container text-center mb-2em" *ngIf="solicitudPago !== undefined && detalleForm.get( 'conceptoPagoCriterio' ).value !== null">
     <div class="text-right">
-        <a routerLink="/verificarSolicitudPago" mat-button color="primary" class="btn-regresar">
+        <a routerLink="/autorizarSolicitudPago" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
